--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/css/space-animations.css">
   <link rel="stylesheet" href="/css/interactive-demo.css">
   <link rel="stylesheet" href="/css/demo-page.css">
+  <link rel="stylesheet" href="/css/page-builder.css">
   <!-- Favicon -->
   <link rel="icon" href="/images/favicon.ico">
   <script>
