--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,7 @@
         <a href="/analytics" class="text-gray-300 hover:text-white transition-colors">Analytics</a>
         <a href="/blog" class="text-gray-300 hover:text-white transition-colors">Blog</a>
         <a href="/community" class="text-gray-300 hover:text-white transition-colors">Community</a>
+        <a href="/buy-package" class="text-gray-300 hover:text-white transition-colors">Website Builder</a>
         <a href="/about" class="text-gray-300 hover:text-white transition-colors">About</a>
 
         <% if (user) { %>
@@ -34,6 +35,12 @@
                 <i class="fas fa-user mr-2"></i> My Profile
               </a>
               <!-- Messages link removed as requested -->
+              <a href="/dashboard/websites" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-globe mr-2"></i> My Websites
+              </a>
+              <a href="/create-website" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-plus mr-2"></i> Create Website
+              </a>
               <a href="/blog/create/new" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-newspaper mr-2"></i> Create Blog
               </a>
@@ -70,6 +77,7 @@
         <a href="/analytics" class="text-gray-300 hover:text-white transition-colors py-2">Analytics</a>
         <a href="/blog" class="text-gray-300 hover:text-white transition-colors py-2">Blog</a>
         <a href="/community" class="text-gray-300 hover:text-white transition-colors py-2">Community</a>
+        <a href="/buy-package" class="text-gray-300 hover:text-white transition-colors py-2">Website Builder</a>
         <a href="/about" class="text-gray-300 hover:text-white transition-colors py-2">About</a>
 
         <% if (user) { %>
@@ -87,6 +95,12 @@
               <i class="fas fa-user mr-2"></i> My Profile
             </a>
             <!-- Messages link removed as requested -->
+            <a href="/dashboard/websites" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-globe mr-2"></i> My Websites
+            </a>
+            <a href="/create-website" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-plus mr-2"></i> Create Website
+            </a>
             <a href="/blog/create/new" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-newspaper mr-2"></i> Create Blog
             </a>
